--- a/reports/mono-3.0/HPLT-v3-rus_Cyrl.yaml
+++ b/reports/mono-3.0/HPLT-v3-rus_Cyrl.yaml
@@ -1,5 +1,5 @@
 corpus: hplt-v3-rus_Cyrl-SAMPLED
-srclang: ru
+srclang: rus
 timestamp: 1758688701.6245697
 warnings: []
 docs_collections: '[["CC-MAIN-2020-40", 25278], ["wide16", 23000], ["CC-MAIN-2021-04",
