Updated batch of reports for HPLT v3 with 3-letter codes

--- a/reports/mono-3.0/HPLT-v3-pan_Guru.yaml
+++ b/reports/mono-3.0/HPLT-v3-pan_Guru.yaml
@@ -1,5 +1,5 @@
 corpus: hplt-v3-pan_Guru
-srclang: pa
+srclang: pan
 timestamp: 1758169785.334686
 warnings: []
 docs_collections: '[["CC-MAIN-2022-27", 48374], ["CC-MAIN-2022-33", 45305], ["CC-MAIN-2022-40",
