--- a/reports/mono-3.0/HPLT-v3-pol_Latn.yaml
+++ b/reports/mono-3.0/HPLT-v3-pol_Latn.yaml
@@ -1,5 +1,5 @@
 corpus: hplt-v3-pol_Latn
-srclang: pl
+srclang: pol
 timestamp: 1758226152.5654924
 warnings: []
 docs_collections: '[["wide11", 8651432], ["CC-MAIN-2020-05", 8222877], ["CC-MAIN-2018-05",
