--- a/reports/mono-3.0/HPLT-v3-por_Latn.yaml
+++ b/reports/mono-3.0/HPLT-v3-por_Latn.yaml
@@ -1,5 +1,5 @@
 corpus: hplt-v3-por_Latn
-srclang: pt
+srclang: por
 timestamp: 1758244426.3647928
 warnings: []
 docs_collections: '[["CC-MAIN-2017-26", 19767590], ["CC-MAIN-2018-05", 13476870],
