Updated batch of reports for HPLT v3 with 3-letter codes

--- a/reports/mono-3.0/HPLT-v3-nld_Latn.yaml
+++ b/reports/mono-3.0/HPLT-v3-nld_Latn.yaml
@@ -1,5 +1,5 @@
 corpus: hplt-v3-nld_Latn
-srclang: nl
+srclang: nld
 timestamp: 1758203813.5211594
 warnings: []
 docs_collections: '[["CC-MAIN-2020-05", 9230735], ["CC-MAIN-2018-05", 6012377], ["CC-MAIN-2020-10",
