Updated batch of reports for HPLT v3 with 3-letter codes

--- a/reports/mono-3.0/HPLT-v3-mal_Mlym.yaml
+++ b/reports/mono-3.0/HPLT-v3-mal_Mlym.yaml
@@ -1,5 +1,5 @@
 corpus: hplt-v3-mal_Mlym
-srclang: ml
+srclang: mal
 timestamp: 1758169322.86964
 warnings: []
 docs_collections: '[["CC-MAIN-2018-39", 264381], ["CC-MAIN-2023-40", 212003], ["CC-MAIN-2023-14",
