--- a/reports/mono-3.0/HPLT-v3-mar_Deva.yaml
+++ b/reports/mono-3.0/HPLT-v3-mar_Deva.yaml
@@ -1,5 +1,5 @@
 corpus: hplt-v3-mar_Deva
-srclang: mr
+srclang: mar
 timestamp: 1758169324.0455842
 warnings: []
 docs_collections: '[["CC-MAIN-2023-14", 230745], ["CC-MAIN-2023-40", 197089], ["CC-MAIN-2023-23",
