--- a/reports/mono-3.0/HPLT-v3-mya_Mymr.yaml
+++ b/reports/mono-3.0/HPLT-v3-mya_Mymr.yaml
@@ -1,5 +1,5 @@
 corpus: hplt-v3-mya_Mymr
-srclang: my
+srclang: mya
 timestamp: 1758171914.920292
 warnings: []
 docs_collections: '[["wide15", 70741], ["wide16", 68131], ["CC-MAIN-2020-05", 59846],
