--- a/reports/mono-3.0/HPLT-v3-mkd_Cyrl.yaml
+++ b/reports/mono-3.0/HPLT-v3-mkd_Cyrl.yaml
@@ -1,5 +1,5 @@
 corpus: hplt-v3-mkd_Cyrl
-srclang: mk
+srclang: mkd
 timestamp: 1758708445.329777
 warnings: []
 docs_collections: '[["wide11", 192799], ["CC-MAIN-2020-05", 186041], ["wide12", 176293],
