Updated batch of reports for HPLT v3 with 3-letter codes

--- a/reports/mono-3.0/HPLT-v3-lao_Laoo.yaml
+++ b/reports/mono-3.0/HPLT-v3-lao_Laoo.yaml
@@ -1,5 +1,5 @@
 corpus: hplt-v3-lao_Laoo
-srclang: lo
+srclang: lao
 timestamp: 1758068416.8766456
 warnings: []
 docs_collections: '[["CC-MAIN-2018-39", 2899], ["CC-MAIN-2023-14", 2705], ["CC-MAIN-2020-05",
