--- a/reports/mono-3.0/HPLT-v3-lit_Latn.yaml
+++ b/reports/mono-3.0/HPLT-v3-lit_Latn.yaml
@@ -1,5 +1,5 @@
 corpus: hplt-v3-lit_Latn
-srclang: lt
+srclang: lit
 timestamp: 1758169322.8699625
 warnings: []
 docs_collections: '[["CC-MAIN-2020-05", 836381], ["CC-MAIN-2020-24", 615761], ["CC-MAIN-2021-49",
