--- a/reports/mono-3.0/HPLT-v3-lvs_Latn.yaml
+++ b/reports/mono-3.0/HPLT-v3-lvs_Latn.yaml
@@ -1,5 +1,5 @@
 corpus: hplt-v3-lvs_Latn
-srclang: lv
+srclang: lvs
 timestamp: 1758171434.5997128
 warnings: []
 docs_collections: '[["CC-MAIN-2020-05", 512271], ["CC-MAIN-2020-24", 375629], ["CC-MAIN-2020-10",
