Updated batch of reports for HPLT v3 with 3-letter codes

--- a/reports/mono-3.0/HPLT-v3-kan_Knda.yaml
+++ b/reports/mono-3.0/HPLT-v3-kan_Knda.yaml
@@ -1,5 +1,5 @@
 corpus: hplt-v3-kan_Knda
-srclang: kn
+srclang: kan
 timestamp: 1758171477.065755
 warnings: []
 docs_collections: '[["CC-MAIN-2018-39", 139432], ["CC-MAIN-2023-40", 129045], ["CC-MAIN-2023-14",
