--- a/reports/mono-3.0/HPLT-v3-kor_Hang.yaml
+++ b/reports/mono-3.0/HPLT-v3-kor_Hang.yaml
@@ -1,5 +1,5 @@
 corpus: hplt-v3-kor_Hang
-srclang: ko
+srclang: kor
 timestamp: 1758217571.6371388
 warnings: []
 docs_collections: '[["CC-MAIN-2020-05", 2628331], ["wide16", 2422553], ["wide12",
