Added new pdf implementation

--- a/front/package.json
+++ b/front/package.json
@@ -12,10 +12,11 @@
     "all-iso-language-codes": "^1.0.17",
     "axios": "^1.12.2",
     "canvg": "^4.0.3",
+    "dom-to-image-more": "^3.7.1",
     "formidable": "^3.5.4",
     "fs": "0.0.1-security",
     "hamburger-react": "^2.5.1",
-    "html-to-image": "^1.11.13",
+    "html-to-image": "^1.2.0",
     "js-yaml": "^4.1.0",
     "json5": "^2.2.3",
     "jspdf": "^3.0.3",
